syntax = "proto3";

package kubegames_game;

option go_package = "github.com/kubegames/kubegames-operator/app/game"; 

import "app/game/types/types.proto";
import "app/lib/google/api/annotations.proto";
import "app/lib/gogo/protobuf/gogo.proto";

option (gogoproto.gostring_all) = true;  
option (gogoproto.equal_all) = true;  
option (gogoproto.verbose_equal_all) = true;  
option (gogoproto.marshaler_all) = true;  
option (gogoproto.sizer_all) = true;  
option (gogoproto.unmarshaler_all) = true;  
option (gogoproto.goproto_getters_all) = false;  

// game api service
service GameService {
	//delete game 
	rpc Delete(kubegames_types.DeleteRequest) returns (kubegames_types.DeleteResponse) {
		option (google.api.http) = {
			delete: "/api/v1/delete/{gameID}"
		};
	}
}